fixes for dark mode display in projects and parterns pages

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,7 +30,7 @@
   --ifm-color-primary-light: #cfe4e0;
   --ifm-color-primary-lighter: #cfe4e0;
   --ifm-color-primary-lightest: #cfe4e0;
-  --docusaurus-highlighted-code-line-bg: rgba(223, 215, 215, 0.3);
+  --docusaurus-highlighted-code-line-bg: rgba(243, 231, 231, 0.3);
   
   
 }
